index scrollbar firefox fix

--- a/resources/assets/sass/tachyon.scss
+++ b/resources/assets/sass/tachyon.scss
@@ -2850,6 +2850,10 @@ canvas#pdf {
     font-size: 0.8em;
     letter-spacing: 1px;
       @include transition(.5s);
+-webkit-user-select: none; /* Safari */        
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none; /* IE10+/Edge */
+user-select: none; /* Standard */      
 
 }
 
@@ -3069,7 +3073,7 @@ h1{
 /*The Wrapper*/
 .index-scrollbar{
     min-width: 300px;
-    max-height: 100%;
+    max-height: 100vh;
     width: 100%;
     padding-right: 10px;    
 }
